== 0.5.1
 * Set gemspec to use EventMachine version 0.8.1 as it's the latest one having precompiled windows binaries.
   Recommended by Francis Cianfrocca.

== 0.5.0
 * Full rewrite to use EventMachine, Rack and Mongrel parser
 
== 0.4.1
 * Fix Rails environment option not being used in thin script.
 
== 0.4.0
 * First alphaish release as a gem.